Fix spotify playlists that are over 50 tracks (#262)
* Fix spotify playlists that are over 50 tracks

* Lint code

* Use a solution that I am happy with

* Cleanup code

* Rename vars